--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -8,12 +8,14 @@
     //For expandables
     position: relative;
     z-index: 1000;
-    @media only screen and (min-width: $desktopAd) { min-height: 96px; }
-}
+    @media only screen and (min-width: $desktopAd) {
+        min-height: 96px;
+    }
 
-    .ad-slot iframe {
+    iframe {
         margin: 0 auto;
     }
+}
 
 .ad-container {
     display: inline-block;
@@ -28,11 +30,11 @@
 
 .ad-slot-middle-banner-ad {
     background-color: #ffffff;
-    min-height: 0px;
+    min-height: 0;
     border-bottom: 1px solid #EDEDE7;
 }
 
 .ad-slot-middle-banner-ad .ad-container {
     max-height: 50px;
-    padding: 5px 0px 10px 0px;
+    padding: 5px 0 10px 0;
 }
