--- a/common/app/assets/stylesheets/module/_headers.scss
+++ b/common/app/assets/stylesheets/module/_headers.scss
@@ -9,7 +9,7 @@
 
     .front-section-head h1,
     .sub-section-head h1 {
-        margin-bottom: 0px;
+        margin-bottom: 0;
         line-height: 1em;
     }
 
@@ -37,10 +37,12 @@
     border-top: 4px solid $mushroom;
     border-bottom: 1px solid $mushroom;
     @include box-sizing(border-box);
-}
 
-.section-head.zone-color {
-  @media only screen and (min-width: $tablet) { border-top: none; }
+    &.zone-color {
+        @media only screen and (min-width: $tablet) {
+            border-top: none;
+        }
+    }
 }
 
 //Articles
@@ -53,7 +55,9 @@
     border-top: 4px solid $mushroom;
     border-bottom: 1px solid $mushroom;
 
-    @media only screen and (min-width: $tablet) { border-top: none; }
+    @media only screen and (min-width: $tablet) {
+        border-top: none;
+    }
 }
 
 //Static pages and misc
