--- a/common/app/assets/stylesheets/module/_social.scss
+++ b/common/app/assets/stylesheets/module/_social.scss
@@ -10,52 +10,52 @@ a.social-btn {
     @extend %type-10;
     text-align: center;
     display: block;
-    padding: 8px 0px;
+    padding: 8px 0;
     color: #ffffff;
     border-bottom: 8px solid #ffffff;
-    position:relative
+    position: relative
 }
 
-.social .social-btn span{
-	display:block;
-    position:absolute;
+.social .social-btn span {
+	display: block;
+    position: absolute;
 }
-.social .social-btn .logo-container{
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+.social .social-btn .logo-container {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-.social .social-btn .logo{
-	left:5px;
-	bottom:5px;
+.social .social-btn .logo {
+	left: 5px;
+	bottom: 5px;
 }
 
 @media (min-width: 20em) {
 
     .social {
-      padding: $baseline*3 0px $baseline*4 $gutter;
+        padding: $baseline*3 0 $baseline*4 $gutter;
     }
     
     .social .social-network {
         float: left;
         width: 24%;
         max-width: 80px;
-        margin-right:8px;
+        margin-right: 8px;
     }
     
     .social .social-network:last-child {
-        margin-right:0;
+        margin-right: 0;
     }
 
     .social-btn,
-    a.social-btn{
-        border-bottom-width: 0px;
-        }
+    a.social-btn {
+        border-bottom-width: 0;
+    }
    
     .social-network:last-child .social-btn {
-        border-right-width: 0px;
-        }
+        border-right-width: 0;
+    }
 }
 
 .fb {
