--- a/common/app/assets/stylesheets/module/experiments/_reaction.scss
+++ b/common/app/assets/stylesheets/module/experiments/_reaction.scss
@@ -1,64 +1,63 @@
 /* ==========================================================================
-   Story-latest reaction
-   ========================================================================== */
+     Story-latest reaction
+     ========================================================================== */
 .story-reactions {
-  margin-bottom: 12px;
+    margin-bottom: 12px;
 }
 
 .story-reactions .story-title,
-.story-reactions ul{
-  background-color: #E1E1E1;
+.story-reactions ul {
+    background-color: #E1E1E1;
 }
 
 .story-reactions ul {
-  margin: 0 10px;
-  overflow: auto;
+    margin: 0 10px;
+    overflow: auto;
 }
 
 .story-reaction {
-  position: relative;
-  overflow: auto;
-  min-height: 176px;
-  margin-bottom: 12px;
-  border-top: 1px solid #9D9D9D;
+    position: relative;
+    overflow: auto;
+    min-height: 176px;
+    margin-bottom: 12px;
+    border-top: 1px solid #9D9D9D;
+
+    &:first-child { border-top: none; }
 }
 
-.story-reaction:first-child { border-top: none; }
-
 .story-reaction__lead {
-  position: relative;
-  z-index: 100;
-  padding: 12px 0 0 2px;
-  width:60%;
-  margin-bottom: 0px;
-  font-family: $serifheadline;
-  font-weight: 200;
-  font-size: 2rem;
-  line-height: 2.4rem;
+    position: relative;
+    z-index: 100;
+    padding: 12px 0 0 2px;
+    width: 60%;
+    margin-bottom: 0;
+    font-family: $serifheadline;
+    font-weight: 200;
+    font-size: 2rem;
+    line-height: 2.4rem;
 }
 
 .story-reaction__byline {
-  margin: 0 0 0 2px;
-  font-family: $serifheadline;
-  font-weight: 600;
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  color: #000;
+    margin: 0 0 0 2px;
+    font-family: $serifheadline;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    color: #000;
 }
 
 .story-reaction__img {
-  width:40%;
-  max-width: 140px;
-  position: absolute;
-  right: 0px;
-  bottom: 32px;
+    width: 40%;
+    max-width: 140px;
+    position: absolute;
+    right: 0;
+    bottom: 32px;
 }
 
 .story-reaction .cta-new {
-  position: absolute;
-  bottom: 0px;
+    position: absolute;
+    bottom: 0;
 }
-
 
 .story-content {
     clear: both;
