--- a/common/app/assets/stylesheets/module/football/_match-summary.scss
+++ b/common/app/assets/stylesheets/module/football/_match-summary.scss
@@ -2,28 +2,28 @@
     padding-top: 5px;
     padding-bottom: $baseline !important;
     margin-bottom: $baseline*3;
-}
 
-    .match-summary h2 {
+    h2 {
         margin-bottom: $baseline*2;
     }
 
-    .match-summary p:nth-child(3){
+    p:nth-child(3) {
         margin-bottom: $baseline*2;
     }
 
-    .match-summary .away-team {
+    .away-team {
         border-top: 1px solid $mushroom;
         padding-top: $baseline;
     }
 
-    .match-summary .home-scorers {
+    .home-scorers {
         margin-bottom: $baseline*2;
     }
 
-    .match-summary .match-comment {
+    .match-comment {
         text-align: left;
         border-top: 1px solid #F4F4EE;
         margin-top: $baseline*2;
         padding-top: 5px;
     }
+}
