--- a/common/app/assets/stylesheets/module/football/_tables.scss
+++ b/common/app/assets/stylesheets/module/football/_tables.scss
@@ -27,10 +27,10 @@
     font-weight: 500;
     color: $sportMid;
     border-top: 1px solid #DEDEDD;
-}
 
-.table-football-body th:first-child {
-    border-top: none;
+    &:first-child {
+        border-top: none;
+    }
 }
 
 .table-football th,
@@ -57,10 +57,10 @@
 .table-football-body tr {
     border-bottom: 1px solid #DEDEDD;
     background-color: transparent;
-}
 
-.table-football-body tr:last-child {
-    border-bottom: none;
+    &:last-child {
+        border-bottom: none;
+    }
 }
 
 .table-football-body a {
@@ -116,7 +116,9 @@
 
 /* These are used to hide columns that we don't display on smaller screens. */
 
-.stats-1, .stats-2, .stats-3 {
+.stats-1,
+.stats-2,
+.stats-3 {
     display: none;
 }
 @media screen and (min-width: 25em) {
